--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ repository = "https://github.com/henrybarreto/parachute"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 clap  = { version = "3.2.16" }
+log = { version = "0.4.17" }
+simple_logger = { version = "2.2.0" }
 
 server = { path = "./server/" }
 client = { path = "./client/" }
