--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -3,12 +3,13 @@ name = "client"
 description = "Parachute client"
 version = "0.1.0"
 edition = "2021"
-author = "henry barreto <me@henrybarreto.dev>"
+author = "Henry Barreto <me@henrybarreto.dev>"
 repository = "https://github.com/henrybarreto/parachute/client"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 redis = { version = "0.21.5", features = ["tokio-comp"] }
 uuid = { version = "1.1.2", features= ["v4"] }
+server = { path = "../server" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
